<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">galen</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_now">NOT NOW</string>
    <string name="mobile_number_email_address">Mobile Number/Email Adress</string>
    <string name="password">Password</string>
    <string name="forget_password">Did You Forget Your Password ?</string>
    <string name="code">Patient Code</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="type">Type</string>
    <string name="confirm_sms">Please confirm your mobile number and a temporary password will be sent to allow you to  re-enter again</string>
    <string name="send">SEND</string>
    <string name="more">More</string>
    <string name="favorites">Favorites</string>
    <string name="myappointments">My Appointments</string>
    <string name="area_speciality"><![CDATA[SEARCH BY AREA & SPECIALTY]]></string>
    <string name="name">SEARCH BY DOCTOR NAME</string>
    <string name="forget_password2">FORGOT YOUR PASSWORD ?</string>
    <string name="login">Login</string>
    <string name="sign_up2">Sign Up</string>
    <string name="Settings">Settings</string>
    <string name="approval_list">Approval List</string>
    <string name="contact_us">Contact Us</string>
    <string name="Settings1">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_data">UPDATE MY DATA</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="Application_Language">Application_Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="old_password">old_password</string>
    <string name="new_password">new_password</string>
    <string name="confirm">CONFIRM</string>
    <string name="reject">Reject</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="booking">A text message and e-mail were sent with all the details of the booking</string>
    <string name="login_error">Please Fill All Data Required Above</string>
    <string name="email_not_set">please check your email</string>
    <string name="email_or_password_error">email or password is wrong</string>
    <string name="welcome">WELCOME</string>
    <string name="wrong_mobile_number">wrong mobile number check your number</string>
    <string name="details">Details</string>
    <string name="detect">Detect</string>
    <string name="map_location">Map Location</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled_appointment">Cancelled Appointment</string>
    <string name="favorite_doctors">Favorite Doctors</string>
    <string name="location">Location</string>
    <string name="speciality">Specialities</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="error">Error</string>
    <string name="insurance_company_2">Insurance Companies</string>
    <string name="doctors">Doctors</string>
    <string name="doctor_data">Doctors data</string>
    <string name="available_appointments">Available Appointments</string>
    <string name="doctor_information">Doctor Information</string>
    <string name="vistors_reviews">Vistors Reviews</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="enter_discount_code">Enter Discount Code</string>
    <string name="fees">Fees</string>
    <string name="detection_price">Detection Price</string>
    <string name="vistors_ratings">Vistors Ratings</string>
    <string name="password_not_matched">password and confirm password not matched</string>
    <string name="auto_location">Auto Location</string>
    <string name="select_governate">select Governate</string>
    <string name="all_governorates">All Governorates</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="location_permission_denied">Location Permission is Denied we Can\'t get o your Location</string>
    <string name="search_1">search</string>
    <string name="Accepts_the_discount_code">Accepts the discount code</string>
    <string name="not_Accepts_the_discount_code">Do Not Accepts the discount code</string>
    <string name="about_us">ABOUT US</string>
    <string name="detection_number">Detection Number</string>
    <string name="doctor_code">Doctor Code</string>
    <string name="patient_code">Patient Code</string>
    <string name="appointments_details">Appointments Details</string>
    <string name="date_of_detection">Date of Detection</string>
    <string name="patient_name">Patient Name</string>
    <string name="medical_report">Medical Report</string>
    <string name="list_of_drugs">List Of Drugs</string>
    <string name="rumors">Rumors</string>
    <string name="drug">Drug</string>
    <string name="the_dose">The dose</string>
    <string name="password_reset">password has been reset</string>
    <string name="data_updated">data has been updated</string>
    <string name="please_turn_on_gps">please turn on gps</string>
    <string name="Detection_Price">Detection Price :</string>
    <string name="book_now">BOOK NOW</string>
    <string name="please_sign_in_first">please sign in first</string>
    <string name="no_appointments_yet">No Appointments Yet</string>
    <string name="no_favourites_yet">No Favourites Yet</string>
    <string name="filters">Filters</string>
    <string name="degree">Degree</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="insurance_company_3">Choose Insurance Company</string>
    <string name="degree_2">choose Degree</string>
    <string name="country">choose country</string>
    <string name="choose_image">choose Image</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="added_to_favourite">Added To Favourite</string>
    <string name="my_appointments">My Appointments</string>
    <string name="history">History</string>
    <string name="view">View</string>
    <string name="add_review">Add Review</string>
    <string name="definition_and_addition"><![CDATA[Definitions & Additions]]></string>
    <string name="create_doctor_account">Create Doctor Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="list">list</string>
    <string name="hospital_clinic_definition">Hospital/Clinic Definition</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="edit_delete_doctor">Edit/Delete Doctor</string>
    <string name="define_working_time">Define Working Time</string>
    <string name="view_edit_working_time">View/Edit Working Time</string>
    <string name="block_patinet">Block Patient</string>
    <string name="hospital_code">Hospital/Clinc Code</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="area">Area</string>
    <string name="save">Save</string>
    <string name="hospital_clinic">Hospital/Clinic</string>
    <string name="delete_doctor">Delete Doctor</string>
    <string name="edit_doctor">Edit Doctor</string>
    <string name="times_of_work">Times Of Work</string>
    <string name="saturaday">saturaday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="wednsday">wednsday</string>
    <string name="tuesday">tuesday</string>
    <string name="monday">monday</string>
    <string name="appointment_period">Appointment Period</string>
    <string name="block_patient">Block Patient</string>
    <string name="evaluation">Evaluation</string>
    <string name="none">none</string>
    <string name="active">active</string>
    <string name="not_active">not active</string>
    <string name="please_select_doctor_first">please select doctor first</string>
    <string name="website">Website</string>
    <string name="status">status</string>
    <string name="please_select_speciality_first">please select speciality first</string>
    <string name="add_doctor_definition">Add Doctor Definition</string>
    <string name="please_select_government_first">please select government first</string>
    <string name="please_select_city_first">please select city first</string>
    <string name="please_select_insurance_company_first">please select insurance company first</string>
    <string name="please_fill_data_fields">please fill data fields</string>
    <string name="please_select_clinic_first">please select clinic first</string>
    <string name="number_is_too_long">number is too long</string>
    <string name="number_is_too_short">number is too short</string>
    <string name="Detectin_Price">Detectin Price :</string>
    <string name="no_reviews_yet">no Reviews yet</string>
    <string name="added_to_reviews">Added To Reviews</string>
    <string name="selected_appointment">Selected Appointment</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="user_exists">Previous User Exists with same E-mail or Phone number</string>
    <string name="booked_up">Booked Up</string>
    <string name="not_reserved">Not Reserved</string>
    <string name="Timeout_error">Oops. Timeout error!</string>
    <string name="try_again_later">try again later</string>
    <string name="search_area">Search Area</string>
    <string name="search_by_speciality">Search By Speciality</string>
    <string name="search_by_name">Search By Name</string>
    <string name="doctor_reviews">doctor_reviews</string>
    <string name="offer">Offers</string>
    <string name="no_offers_yet">No Offers Yet</string>
    <string name="myoffers">My Offers</string>


</resources>

