<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"

    tools:context=".patient_module.Activities.patient_sign_up">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/toolbar_color"
        style="@style/ToolBarStyle.Event"
        >
        <TextView
            android:id="@+id/back"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up2"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/code"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15dp"
        android:hint="@string/code"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/full_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15dp"
        android:hint="@string/full_name"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/phone_call"
        android:drawablePadding="15dp"
        android:hint="@string/mobile_number"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/email_address"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:hint="@string/email_address"
        android:textSize="15dp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_edit_text1"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:padding="8dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/see_password"
            android:layout_width="15dp"
            android:layout_height="10dp"
            android:layout_alignEnd="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_alignBottom="@+id/password"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/eye_show_password" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_edit_text1"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="15dp"
            android:hint="@string/confirm_password"
            android:textSize="15dp" />

        <Button
            android:id="@+id/see_confirm_password"
            android:layout_width="15dp"
            android:layout_height="10dp"
            android:layout_alignEnd="@+id/confirm_password"
            android:layout_alignRight="@+id/confirm_password"
            android:layout_alignBottom="@+id/confirm_password"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/eye_show_password" />
    </RelativeLayout>
    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/calendar"
        android:drawablePadding="15dp"
        android:hint="@string/date_of_birth"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/insurance_company"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/insurance_companies"
        android:drawablePadding="15dp"
        android:hint="@string/insurance_company"
        android:textSize="15dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"/>

        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/register"
        android:text="@string/register_now"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/round_button_1"
        android:textColor="@color/white"/>

</LinearLayout>