<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute"
    android:layoutDirection="ltr">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/toolbar_color"
            style="@style/ToolBarStyle.Event"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                />


        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance_company"
                android:textColor="@color/green_light"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/insurance_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:background="@drawable/round_button_2"
                android:text="@string/insurance_company_3"></Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fees"
                android:textColor="@color/green_light"
                android:hint="@string/fees"
                android:layout_marginLeft="10dp"/>
            <com.mohammedalaa.seekbar.RangeSeekBarView
                android:id="@+id/range_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barHeight="@dimen/value_bar_barHeight"
                app:baseColor="@color/navy"
                app:circleRadius="@dimen/value_bar_circleRadius"
                app:circleTextColor="@color/white"
                app:circleTextSize="@dimen/value_bar_circleTextSize"
                app:fillColor="@color/green_light"
                app:currentValue="60"
                app:minValue="0"
                app:maxValue="1500"
                app:stepValue="10"
                android:layout_margin="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:textColor="@color/green_light"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                >
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    />

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@color/green_light"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/round_button_2"
                android:text="@string/degree_2"
               />

        </LinearLayout>
        <Button
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/filters"
            android:textColor="#fff" />

    </LinearLayout>
</LinearLayout>











