<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vistors_ratings"
        android:textAlignment="center"
        android:textColor="@color/green_light"
        android:textSize="18dp"/>
    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="5"
        android:numStars="5"
        android:layout_margin="15dp"
        style="?android:attr/ratingBarStyleSmall"
        android:background="@drawable/rounded_edit_text1"
        android:layout_gravity="center"

        />
    <EditText
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_edit_text1"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15dp"
        android:hint="@string/vistors_reviews"
        android:padding="15dp"
        android:textSize="15dp" />
    <Button
        android:id="@+id/add_review"
        android:text="@string/add_review"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/round_button_1"
        android:textColor="@color/white"/>



</LinearLayout>