<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/toolbar_color"
        style="@style/ToolBarStyle.Event"
        >
        <TextView
            android:id="@+id/back"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            >
            <TextView
                android:id="@+id/notifications"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:drawableLeft="@drawable/notifications"
                android:layout_marginRight="20dp"

                />

            <TextView
                android:id="@+id/number_of_notifications"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/circle"
                android:text="15"
                android:textSize="6dp"
                android:textAlignment="center"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round_button_1" >

        <Button
            android:id="@+id/update_data"
            android:text="@string/update_data"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/white_user"
            android:textColor="@color/white"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round_button_1" >

        <Button
            android:id="@+id/change_password"
            android:text="@string/change_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/white_password"
            android:drawablePadding="15dp"
            android:textColor="@color/white"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Application_Language"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        >
        <RadioButton
            android:id="@+id/English"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/English"
            android:layout_margin="5dp"
            />
        <RadioButton
            android:id="@+id/Arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Arabic"
            android:layout_margin="5dp"
            />

    </RadioGroup>
</LinearLayout>