<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    tools:context=".patient_module.Activities.patient_forget_password">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/toolbar_color"
        style="@style/ToolBarStyle.Event"
        >
        <TextView
            android:id="@+id/back"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password2"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_sms"
        android:textAlignment="center"
        android:textSize="17dp"
        android:layout_margin="20dp"/>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.rilixtech.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/phone_call"
                android:drawablePadding="15dp"

                />
            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/mobile_number"
                android:textSize="15dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/send"
        android:text="@string/send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/round_button_1"
        android:textColor="@color/white"/>
</LinearLayout>